## Process this file with automake to produce Makefile.in
#
# include/Makefile.am
#

# Get version info
all: smartmon/version.h

smartmon/version.h: smartmon/version.sh
	$(AM_V_GEN)$(top_srcdir)/src/getversion.sh -i < smartmon/version.sh > $@.tmp
	$(AM_V_at)mv -f $@.tmp $@

smartmon/version.sh: ../src/getversion.sh ../configure.ac ../Makefile ../src/Makefile smartmon/config.h
	$(AM_V_GEN)$(top_srcdir)/src/getversion.sh -s > $@.tmp
	$(AM_V_at)mv -f $@.tmp $@
	@! $(AM_V_P) || cat $@

if INSTALL_DEVEL

incsmartmondir = $(includedir)/smartmon
incsmartmon_DATA = \
        smartmon/atacmdnames.h \
        smartmon/atacmds.h \
        smartmon/config.h \
        smartmon/dev_interface.h \
        smartmon/json.h \
        smartmon/knowndrives.h \
        smartmon/nvmecmds.h \
        smartmon/scsicmds.h \
        smartmon/sg_unaligned.h \
        smartmon/static_assert.h \
        smartmon/utility.h \
        smartmon/version.h

if OS_WIN32
incsmartmonw32dir = $(incsmartmondir)/os_win32
incsmartmonw32_DATA = \
        smartmon/os_win32/wmiquery.h

if OS_WIN32_MINGW
incsmartmonw32_DATA += \
        smartmon/os_win32/popen.h
endif
endif

if NEED_REGEX
incsmartmonrexdir = $(incsmartmondir)/regex
incsmartmonrex_DATA = \
        smartmon/regex/regex.h
endif

endif

EXTRA_DIST = \
        smartmon/atacmdnames.h \
        smartmon/atacmds.h \
        smartmon/dev_interface.h \
        smartmon/json.h \
        smartmon/knowndrives.h \
        smartmon/nvmecmds.h \
        smartmon/scsicmds.h \
        smartmon/sg_unaligned.h \
        smartmon/static_assert.h \
        smartmon/utility.h \
        smartmon/os_win32/popen.h \
        smartmon/os_win32/wmiquery.h \
        smartmon/regex/regex.h

CLEANFILES = \
        smartmon/version.h \
        smartmon/version.sh

# 'make maintainer-clean' also removes files generated by './autogen.sh'
MAINTAINERCLEANFILES = \
        $(srcdir)/Makefile.in \
        $(srcdir)/smartmon/config.h.in \
        $(srcdir)/smartmon/config.h.in~
